prompt library visualisation added , loading files , and saving the lib

--- a/web/prompt-creation.html
+++ b/web/prompt-creation.html
@@ -10,6 +10,15 @@
 
     <body>
         <div class="editor">
+
+            <header>
+                <h1>Prompt library manager</h1>
+                <nav>
+                    <span id="save_button">save the library</span>
+                    <span><a href="main.html">return in library</a></span>
+                </nav>
+            </header>
+
             <div class="creation-container book-border">
 
                 <div class="required-container">
@@ -90,7 +99,7 @@
             <div class="log" id="log_text"></div>
         </div>
     </body>
-
+    
     <link rel="stylesheet" href="prompt-creation.css">
     <script src="prompt_data.js" type="module"></script>
     <script src="prompt_creation.js" type="module"></script>
